glx/testdata/invalid/broken-references/relationships/rel-parent-child.glx
relationships:
  rel-john-jane:
    type: parent_child
    participants:
      - person: person-john-smith-1850
        role: parent
      - person: person-jane-smith-1876
        role: child
    description: "John Smith is father of Jane Smith"
  
  rel-mary-jane:
    type: parent_child
    participants:
      - person: person-mary-brown-1852
        role: parent
      - person: person-jane-smith-1876
        role: child
    description: "Mary Brown is mother of Jane Smith"
